Initial Commit: Express Backend

--- a/package.json
+++ b/package.json
@@ -10,16 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "firebase-admin": "^13.0.2",
-    "python": "^0.0.4"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "express": "^4.21.2"
   }
 }
