--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "threadly-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend für das Threadly-Projekt",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "prestart": "npm run build",
+    "postinstall": "npm run build"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dein Name",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.2",
+    "@types/node": "^22.10.5",
+    "@types/express": "^5.0.0"
   }
 }
