--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-node_modules
+# Node.js dependencies
+node_modules/
+
+# Build output
+dist/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# IDEs and editors
+.vscode/
+.idea/
