--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "threadly-backend",
   "version": "1.0.0",
-  "description": "Backend für das Threadly-Projekt",
+  "description": "Dein Express-Backend",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && mkdir -p dist/config && cp src/config/*.json dist/config/",
     "start": "node dist/index.js",
-    "prestart": "npm run build",
-    "postinstall": "npm run build"
+    "dev": "ts-node src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Dein Name",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@ngrok/ngrok": "^1.4.1",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "firebase-admin": "^13.0.2",
+    "ngrok": "^5.0.0-beta.2"
   },
   "devDependencies": {
-    "typescript": "^5.7.2",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
-    "@types/express": "^5.0.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
