--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.6.0",
     "@ngrok/ngrok": "^1.4.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
