--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dein Express-Backend",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc && mkdir -p dist/config && cp src/config/*.json dist/config/",
+    "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
